2010-08-12 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m4-1 :
	- new snapshot

2010-08-08 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m3-1 :
	- new snapshot, should be 3.3 beta 1

2010-07-31 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m2-1 :
	- new snapshot
	- drop patch for system libmythes
	- add patch for http://www.openoffice.org/issues/show_bug.cgi?id=113563
	
2010-07-17 Andreas Radke <andyrtr at archlinux.org>

        * 3.3.0-OOO330_m1-1 :
	- 3.3.0 series branched from DEV300_m84
	- adopt all changes that went into the devel pkg
	- disable PYTHONPATH changes in profile file
	- add patch to build with system libmythes

2010-05-29 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m19-1 :
	- new snapshot = 3.2.1 RC3

2010-05-23 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m18-1 :
	- new snapshot = 3.2.1 RC2
	- rework optional dependencies to drop some hardeps, #19445
	- rechecked core deps when optional deps are not present
	- use system libmythes
	- apply ooo-build patch to use system redland/cppunit again
	- build with --with-system-unixodbc-headers, add unixodbc optdep

2010-05-10 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m17-1 :
	- new snapshot = 3.2.1 RC1

2010-04-26 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m16-1 :
	- new snapshot
	- add gcc4.5 fixes
	- use system graphite for i686
	- disable system saxon
	- stick to internal cppunit
	- force configure to use internal redland
	# - --enable-layout again - add buildfixes for this - deferred for now

2010-04-16 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m15-1 :
	- new snapshot
	- build with internal redland

2010-03-26 Andreas Radke <andyrtr at archlinux.org>

        * 3.2.1-OOO320_m14-1 :
	- new snapshot/road to 3.2.1 starts
	- use mercurial for checkout
	- switch to xz compression
	- try to workaround system redland issues
