@@ -4,23 +4,30 @@
 
 pkgbase="openoffice-base-beta"
 pkgname=('openoffice-base-beta' 'openoffice-sdk-beta')
-_OO_milestone=OOO330_m4
+_OO_milestone=OOO330_m5
 pkgver=3.3.0_${_OO_milestone/OOO/ooo} # m3 = beta 1
 pkgrel=1
 arch=('i686' 'x86_64')
 license=('LGPL3')
 url="http://www.openoffice.org"
-makedepends=(# the real makedeps
-             'bison' 'mercurial' 'automake' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl' 'libxtst' 'boost>=1.41.0'
-             'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.2.2" 'unixodbc' 'nss' 'hsqldb-java' 
-             'apache-ant>=1.8.0' 'cairo' 'gperf' 'libcups' 'poppler' 'kdelibs' 'pstoedit' 'gconf' "openjdk6>=6.b17_1.8"
-	     'beanshell' 'vigra' 'libmspack' 'libldap' 'lucene'  'libmythes' 'junit' 'cppunit'
-	     # from main OOo the deps
-	     "curl>=7.20.0" "hunspell>=1.2.8" "python>=2.6.5" 'libwpd' 'libxaw' "neon>=0.28.6"
-	     'pango' 'nspr' 'libjpeg' 'libxrandr' 'libgl' 'dbus-glib' "icu>=4.2.1" 'libxslt'
-	     'redland' 'libgraphite' 'hyphen' 'lpsolve'
-	     'hicolor-icon-theme' 'desktop-file-utils' 'gtk2')
+#makedepends=(# the real makedeps
+#             'bison' 'mercurial' 'automake' 'findutils' 'flex' 'gawk' 'gcc-libs' 'libart-lgpl' 'libxtst' 'boost>=1.41.0'
+#             'pam' 'sane' 'zip' 'perl-archive-zip' 'pkgconfig' 'unzip' "xulrunner>=1.9.2.2" 'unixodbc' 'nss' 'hsqldb-java' 
+#             'apache-ant>=1.8.0' 'cairo' 'gperf' 'libcups' 'poppler' 'kdelibs' 'pstoedit' 'gconf' "openjdk6>=6.b17_1.8"
+#	     'beanshell' 'vigra' 'libmspack' 'libldap' 'lucene'  'libmythes' 'junit' 'cppunit'
+#	     # from main OOo the deps
+#	     "curl>=7.20.0" "hunspell>=1.2.8" "python>=2.6.5" 'libwpd' 'libxaw' "neon>=0.28.6"
+#	     'pango' 'nspr' 'libjpeg' 'libxrandr' 'libgl' 'dbus-glib' "icu>=4.2.1" 
+#	     'redland' 'libgraphite' 'hyphen' 'lpsolve'
+#	     'hicolor-icon-theme' 'desktop-file-utils' 'gtk2')
 	     # 'saxon' 
+makedepends=(# the real makedeps
+             'boost' 'sane' 'perl-archive-zip' 'zip' 'unzip' 'xulrunner' 'unixodbc' 'hsqldb-java'
+             'apache-ant' 'gperf' 'poppler' 'kdelibs' 'gconf' 'openjdk6' 'cppunit'
+	     'beanshell'  'vigra' 'libldap' 'lucene' 'libmythes' 'junit'
+             # from main OOo the deps
+            'curl'  'libwpd' 'libxaw' 'neon'
+	    'mesa'  'libxslt' 'icu' 'redland' 'libgraphite' 'hyphen' 'lpsolve')
 source=(${_OO_milestone}.tar.xz
 	http://tools.openoffice.org/unowinreg_prebuild/680/unowinreg.dll
 	startcenter.desktop
@@ -32,7 +39,6 @@ source=(${_OO_milestone}.tar.xz
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/cppu-lbnames-enable-gcc-4.5.diff
 	http://cgit.freedesktop.org/ooo-build/ooo-build/plain/patches/dev300/sal-cpprt-gcc-4.5-workaround.diff
 	cppunit_gcc45.diff
-	http://www.openoffice.org/nonav/issues/showattachment.cgi/70906/fixup.patch
 	openoffice-beta.profile)
 options=('!distcc' '!ccache' '!makeflags')
 
@@ -46,7 +52,7 @@ mksource() {
 }
 
 build() {
-
+echo ${SRCDEST}
 	cd ${srcdir}/${_OO_milestone}
 
 	# just to make sure that it will detect the desired JDK/JVM - we want openjdk6
@@ -55,7 +61,7 @@ build() {
 	JAVAHOME=${JAVA_HOME}
 	[ -z "${MOZ_PLUGIN_PATH}" ] && . /etc/profile.d/mozilla-common.sh
 	[ -z "${ANT_HOME}" ] && . /etc/profile.d/apache-ant.sh
-	
+
 	# some speedups
 	export SMP="6"
 	MAXMODULESFLAG="-P${SMP}"
@@ -69,8 +75,6 @@ build() {
 	# gcc4.5 fix
 	patch -Np0 -i ${srcdir}/cppu-lbnames-enable-gcc-4.5.diff
 	patch -Np0 -i ${srcdir}/sal-cpprt-gcc-4.5-workaround.diff
-	# buildfix for http://www.openoffice.org/issues/show_bug.cgi?id=113563
-	patch -Np1 -i ${srcdir}/fixup.patch
 
 	# allows soffice to find the user's firefox profile so that it can read
 	# its digital certificates. Nss stores digital certificates in your mozilla firefox profile. 
@@ -110,8 +114,6 @@ build() {
 	--with-lang="en-US"\
 	--with-dict=ALL\
 	--disable-gnome-vfs\
-	--disable-qadevooo\
-	--disable-reportdesign\
 	--disable-systray\
 	--disable-mathmldtd\
 	--enable-binfilter\
@@ -126,12 +128,12 @@ build() {
 	--enable-kde4\
 	--enable-ldap\
 	--enable-lockdown\
-	--enable-mediawiki\
 	--enable-minimizer\
 	--enable-odk\
 	--enable-opengl\
 	--enable-pdfimport\
 	--enable-presenter-console\
+	--enable-presenter-extra-ui\
 	--enable-report-builder\
 	--enable-vba\
 	--enable-verbose\
@@ -139,8 +141,6 @@ build() {
 	--with-package-format=native\
 	--without-fonts\
 	--without-afms\
-	--without-gpc\
-	--without-nas\
 	--without-ppds\
 	--without-system-agg\
 	--without-system-mdds\
@@ -150,25 +150,23 @@ build() {
 	--with-openldap\
 	--with-system-stdlibs\
 	--with-system-libs\
-	--with-system-sane-header\
 	--with-system-mozilla=libxul\
 	--with-system-mythes\
-	--with-system-unixodbc-headers\
-	--with-system-xrender-headers\
 	--with-system-headers\
 	--with-alloc=system\
 	--with-jdk-home=${JAVA_HOME}\
 	--with-lucene-core-jar=/usr/share/java/lucene-core.jar\
 	--with-lucene-analyzers-jar=/usr/share/java/lucene-analyzers.jar\
-	--with-use-shell=bash\
 	--with-external-tar=${SRCDEST}\
 	 $EXTRAOPTS
+
 
 # http://www.openoffice.org/issues/show_bug.cgi?id=113223
 # we should soon move to hunspell+myspell dicts
 #	--with-dict=ALL\
 
 # see http://qa.openoffice.org/issues/show_bug.cgi?id=110136
+#	--with-system-saxon\
 #	--with-saxon-jar=/usr/share/java/saxon/saxon9he.jar\
 
 #	--enable-layout\ /bin/bash: tralay: command not found ???
