@@ -1,3 +1,12 @@
+2010-08-21 Andreas Radke <andyrtr at archlinux.org>
+
+        * 3.3.0-OOO330_m5-1 :
+	- new snapshot
+	- drop buildfix patch
+	- rework deps for clean builds
+	- remove some obsolete configure options
+	- Enhance user painting capabilities during slideshow --enable-presenter-extra-ui
+
 2010-08-12 Andreas Radke <andyrtr at archlinux.org>
 
         * 3.3.0-OOO330_m4-1 :
